--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,3 @@
-# .venv
-.vscode
 serializer.py
 .svg
 
@@ -107,13 +105,13 @@ celerybeat.pid
 *.sage.py
 
 # Environments
-# .env
-# .venv
-# env/
-# venv/
-# ENV/
-# env.bak/
-# venv.bak/
+.env
+.venv
+env/
+venv/
+ENV/
+env.bak/
+venv.bak/
 
 # Spyder project settings
 .spyderproject
