--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,9 @@
 {
-  "builds": [
-    {
-      "src": "Project_BOCS/wsgi.py",  
-      "use": "@vercel/python",
-      "config": { "maxLambdaSize": "15mb" }
-    }
-  ],
+  "version": 2,
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "Project_BOCS/wsgi.py"  
+      "dest": "Project_BOCS/wsgi.py"
     }
   ]
 }
